# rust_archiver

./: Cargo.toml  configuration.rs  cspell.json
config/: local.json
migrations/: 20240227173427_user.sql  20240227173823_balance.sql  20240412106111_position.sql  20240412106533_currency.sql  20240412106555_user.sql  20240412165555_product.sql  20240412165556_provider.sql  20240412165557_provider_game_kind.sql  20240412165558_provider_game.sql  20240412165559_provider_game_config.sql  20240412170328_error_kind.sql  20240412170329_system_log.sql  20240412202806_user_upline.sql  20240412202916_balance.sql  20240413082655_provider_config.sql
src/: lib.rs  main.rs
src/archiver/: mod.rs  opening_balance.rs
src/archiver/bets/: debts.rs  details.rs  loader.rs  mod.rs
src/archiver/opening_balance/: loader.rs  mod.rs
src/connectors/: ae.rs  ameba.rs  arcadia.rs  dot_connections.rs  king_maker.rs  mod.rs  pragmatic.rs  royal_slot_gaming.rs
src/consts/: db.rs  mod.rs  tables.rs
src/db/: mod.rs  tables.rs
src/db/maria_db_migrations/: bet_table.rs
src/db/pg_migrations/: bet_status_table.rs  bet_tables.rs  lottery_bet_table.rs  mod.rs
src/enums/: bet.rs  mod.rs
src/enums/provider/: game_provider.rs  mod.rs  product.rs  provider_game_kind.rs
src/enums/provider/game_provider/: live_casino_provider.rs  lottery.rs  mod.rs  online_casino_provider.rs  slot_provider.rs  sport.rs
src/helpers/: crypto.rs  logger.rs  mod.rs  provider.rs  query_helper.rs  time.rs
src/types/: bet.rs  mod.rs  user.rs
src/utils/: crypto.rs  mod.rs  query_helper.rs  time.rs
tests/: main.rs
tests/archiver/: create_benchmark_data.rs  mod.rs  opening_balance.rs
tests/helper/: db.rs  mock_servers.rs  mod.rs  tables.rs  test_data.rs  user.rs
tests/helper/db/: mod.rs
tests/helper/db/migrations/: mod.rs
tests/helper/db/migrations/maria_db/: bet_archive_details.rs  mod.rs  user_card_table.rs
tests/helper/db/migrations/pg/: balance_table.rs  bet_status_table.rs  bet_tables.rs  currency_table.rs  lottery_bet_table.rs  mod.rs  position_table.rs  user_table.rs  user_upline_table.rs
tests/helper/db/migrations/pg/provider/: mod.rs  product_table.rs  provider_game_config_table.rs  provider_game_kind_table.rs  provider_game_table.rs  provider_table.rs
tests/helper/db/migrations/pg/provider/config/: arcadia.rs  dot_connections.rs  king_maker.rs  mod.rs  pragamtic.rs
tests/helper/db/migrations/pg/provider/provider_config/: ameba.rs  (+6 more)
tests/helper/test_data/: bets.rs  loader.rs  mod.rs  players.rs
