[package]
name = "bet_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dotenvy = "0.15.7"
reqwest = "0.11.24"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
time = "0.3.34"
tokio = "1.36.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "mysql", "migrate", "chrono", "uuid", "macros", "time"] }
