[package]
name = "bet_archiver"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bet_archiver_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dotenvy = "0.15.7"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "mysql", "migrate", "uuid", "macros", "time"] }
config = { version = "0.14.0", features = ["json"] }
claims = "0.7.1"
derive_more = "0.99.17"
parse-display = "0.9.0"
md-5 = "0.10.6"
serde_urlencoded = "0.7.1"
hex = "0.4.3"
serde_repr = "0.1.18"
base64 = "0.22.0"
openssl = "0.10.64"
strum = "0.26.2"
strum_macros = "0.26.2"
lazy_static = "1.4.0"
wiremock = "0.6.0"
